--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ leidenalg = "^0.10.1"
 tqdm = "^4.66.1"
 tlviz = "^0.1.1"
 dask = {extras = ["dataframe"], version = "^2024.6.2"}
+setuptools = "^70.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
