--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,41 +1,76 @@
-[tool.poetry]
+[project]
 name = "pf2rnaseq"
 version = "0.1.0"
 description = "Single cell analysis across conditions using PARAFAC2."
-authors = ["Andrew Ramirez", "Aaron Meyer <git@asmlab.org>"]
+authors = [{name = "Andrew Ramirez"}, {name = "Aaron Meyer", email = "git@asmlab.org" }]
 license = "MIT"
+requires-python = ">= 3.11"
 
-[tool.poetry.dependencies]
-python = ">=3.11,<3.13"
-numpy = "^1.26"
-scipy = "^1.13"
-scikit-learn = "^1.4"
-seaborn = "^0.13.2"
-pandas = "^2.2.1"
-tensorly = "^0.8.1"
-parafac2 = { git = "https://github.com/meyer-lab/parafac2.git", rev = "b0bf58fd3b285d5cf6e598ccd254f7df04c083b9" }
-h5netcdf = "^1.3"
-anndata = "^0.10.3"
-datashader = "^0.16"
-gseapy = "^1.1"
-scanpy = "^1.10"
-pacmap = "^0.7.1"
-leidenalg = "^0.10.1"
-tqdm = "^4.66.1"
-tlviz = "^0.1.1"
-dask = {extras = ["dataframe"], version = "^2024.6.2"}
-setuptools = "^70.1.1"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.0"
-pytest-cov = "^4.1"
-mypy = "^1.9"
-ruff = "^0.4.1"
+dependencies = [
+    "numpy>=1.26",
+    "scipy>=1.13",
+    "scikit-learn>=1.4",
+    "seaborn>=0.13.2",
+    "pandas>=2.2.1",
+    "tensorly>=0.8.1",
+    "parafac2 @ git+https://github.com/meyer-lab/parafac2.git@793f8ad06791ffcc698105d80941774741722574",
+    "h5netcdf>=1.3",
+    "anndata>=0.10.3",
+    "datashader>=0.16",
+    "gseapy>=1.1",
+    "scanpy>=1.10",
+    "pacmap>=0.7.1",
+    "leidenalg>=0.10.1",
+    "tqdm>=4.66.1",
+    "tlviz>=0.1.1",
+    "doubletdetection >=4.2",
+    "statsmodels>=0.14.1",
+    "dask[dataframe]>=2024.3.1",
+    "scib>=1.1.5"]
+
+
+
+readme = "README.md"
+
+[project.scripts]
+fbuild = "pf2rnaseq.figures.common:genFigure"
+factor = "pf2rnaseq.imports:factorSave"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]                                                           
-fbuild = "pf2rnaseq.figures.common:genFigure"
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "pytest>=8.0",
+    "pytest-cov>=5.0",
+    "pyright>=1.1",
+]
+
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["pf2rnaseq"]
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+    # Unused arguments
+    "ARG",
+]
 factor = "pf2rnaseq.imports:factorSave"
